--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <script defer src="explosions.js"></script>
     <script defer src="scoreboard.js"></script>
     <script defer src="input.js"></script>
+    <script defer src="enemy.js"></script>
+    <script defer src="enemyLaser.js"></script>
+    <script defer src="gameLoop.js"></script> <!-- ✅ gameLoop.js must be AFTER enemy.js -->
     <script defer src="gameLoop.js"></script>
     <script defer src="main.js"></script>
 
