--- a/index.html
+++ b/index.html
@@ -1,73 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Space Shooter</title>
-    <link rel="stylesheet" href="./styles.css">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Space Shooter</title>
+        <link rel="stylesheet" href="./styles.css"> <!-- ✅ All styles moved to `styles.css` -->
     
-    <!-- ✅ Game Scripts -->
-    <script defer src="config.js"></script>
-    <script defer src="canvas.js"></script>
-    <script defer src="player.js"></script>
-    <script defer src="asteroids.js"></script>
-    <script defer src="lasers.js"></script>
-    <script defer src="collisions.js"></script>
-    <script defer src="explosions.js"></script>
-    <script defer src="scoreboard.js"></script>
-    <script defer src="input.js"></script>
-    <script defer src="enemy.js"></script>
-    <script defer src="enemyLaser.js"></script>
-    <script defer src="gameLoop.js"></script> <!-- ✅ gameLoop.js must be AFTER enemy.js -->
-    <script defer src="gameLoop.js"></script>
-    <script defer src="main.js"></script>
-
-    <style>
-        /* ✅ Prevent scrolling on mobile */
-        body, html {
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            background-color: black;
-            touch-action: none;
-        }
-
-        /* ✅ Start Button (Centered) */
-        #startButton {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            padding: 15px 30px;
-            font-size: 20px;
-            border-radius: 10px;
-            cursor: pointer;
-            background-color: white;
-            color: black;
-            border: none;
-        }
-
-        /* ✅ Shoot Button (Mobile-Friendly) */
-        #shootButton {
-            position: absolute;
-            bottom: 10%;
-            left: 50%;
-            transform: translateX(-50%);
-            padding: 15px 30px;
-            font-size: 20px;
-            border-radius: 10px;
-            cursor: pointer;
-            background-color: red;
-            color: white;
-            border: none;
-        }
-    </style>
-</head>
+        <!-- ✅ Game Scripts -->
+        <script defer src="canvas.js"></script>
+        <script defer src="config.js"></script>
+        <script defer src="player.js"></script>
+        <script defer src="asteroids.js"></script>
+        <script defer src="lasers.js"></script>
+        <script defer src="collisions.js"></script>
+        <script defer src="explosions.js"></script>
+        <script defer src="scoreboard.js"></script>
+        <script defer src="input.js"></script>
+        <script defer src="enemy.js"></script>
+        <script defer src="enemyLaser.js"></script>
+        <script defer src="powerup.js"></script>
+        <script defer src="gameLoop.js"></script> <!-- ✅ gameLoop.js must be AFTER enemy.js -->
+        <script defer src="intro.js"></script>
+        <script defer src="main.js"></script>
+    </head>
+    
 <body>
-    <!-- ✅ Start Game Button -->
-    <button id="startButton">Start Game</button>
+    <!-- 🚀 Game Thumbnail with Title Overlay -->
+    <div id="gameThumbnailContainer">
+        <img id="gameThumbnail" src="assets/game_thumbnail.jpg" alt="Game Thumbnail">
+        <div id="gameTitle">The Drazzan Invasion</div>
+    </div>
 
-    <!-- ✅ Shoot Button (for mobile) -->
-    <button id="shootButton">Shoot</button>
+    <!-- 🚀 Start Button -->
+    <button id="startButton">Start Game</button>
 </body>
+
+
 </html>
